--- a/css/recipe.css
+++ b/css/recipe.css
@@ -4,12 +4,12 @@
 	margin-right: 30px;
 
 }
- p
+/* p
 {
 	font-color: #404040;
 	font-size:11px;
 	font-family:serif;
-}
+}*/
 .header nav ul
 {
 	margin: 0px;
