--- a/movie-review/css/movie.css
+++ b/movie-review/css/movie.css
@@ -1,109 +1,107 @@
-*
-{
-	margin: 0;
-	padding: 0;
+*{
+	font-family: Verdana, Tahoma, sans-serif;
 }
-body
-{
-	background: url(../images/background.png);
+.main-bg{
+	background-image: url("./../images/background.png");
 	background-repeat: repeat;
-
 }
-#top-header
-{
-	background: url(../images/bannerbg.png);
+.banner-bg{
+	background-image: url("./../images/bannerbg.png");
 	background-repeat: repeat-x;
-}
-#top-header img
-{
-	display: block;
-	margin-left: auto;
-  	margin-right: auto;
-}
-#heading h1
-{
-	margin: 20px;
-	font-style:normal;
-	font-family:Tahoma, Verdana,sans-serif;
-	font-size: 24pt;
 	text-align: center;
+}
+.tmnt-title{
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
 	text-shadow: 3px 3px #999999;
 }
-#main-contents
-{
-	margin-top:20px;
-	border: 4px solid grey;
-	border-radius: 20px;
-}
-
-#ratings 
-{
-	position: relative;
+.main-content{
 	width: 800px;
-	margin-left: auto;
-	margin-right:auto;
-	margin-top:20px;
-	border: 4px solid grey;
+	margin: auto;
+	border: 4px gray solid;
 	border-radius: 20px;
-	overflow: auto;
-
-
-}
-#rating-head
-{
-
-	background: url(../images/rbg.png);	
-	border-radius: 15px 15px 0px 0px;
-}
-#banner
-{
-	border-radius:15px 0px 0px 0px;
-}
-#overview
-{
-	float: right;
-}
-.centered {
-	font-size: 30px;
-	position: absolute;
-	top: 50%;
-	left: 20%;
-	transform: translate(-50%, -50%);
-	color: red;
-
-}
-#box1
-{
+	position: relative;
 	
+}
+.inner-container{
+	display: table;
+}
+.left-aside{
+	width: 550px;
+	display: table-cell;
+	vertical-align: top;
+}
+.left-aside section:first-child{
+	background-image: url("./../images/rbg.png");
+	background-repeat: repeat-x;
+	border-radius: 17px 0px 0px 0px;
+}
+.left-aside>section:first-child img{
+	border-radius: 17px 0px 0px 0px;
+}
+.right-nav{
+	width: 250px;
+	border-radius: 0px 17px 0px 0px;
+	font-size: 8pt;
+	font-family: Arial,sans-serif;
+	display: table-cell;
+	vertical-align: top;
+}
+
+.right-bg{
+	background: #A2B964;
+}
+.right-nav img:first-child{
+	border-radius: 0px 17px 0px 0px;
+}
+.right-nav .desc{
+	padding: 10px;
+	height: 100%;
+}
+.rating-txt{
+	font-size: 48pt;
+    font-weight: bold;
+    vertical-align: top;
+    color: #f00;
+}
+.left-column{
+	width: 47%;
+	margin-left: 2%;
 	float: left;
-	border: 2px solid grey;
-	border-radius: 5px 5px 5px 5px;
-	width: 250px	;
-	margin:10px;
-
 }
-
-#first-critics
-{
-	clear: left;
-
+.comment-box{
+	border: 2px solid gray;
+	border-radius: 10px;
+	font-size: 8pt;
+	font-weight: bold;
+	background: #E8DC9B;
+	padding:8px;
+	min-height: 24px;
 }
-#critic 
-{
-	/*float: left;
-	clear: right;*/
-	display: inline-block;
-	width: 250px	;
-	margin:10px;
-
-
-}
-
-#section
-{
+.txt-img{
 	float: left;
+    margin-right: 5px;
 }
-#description
-{
-	background-color:  #A2B964;
+.cretic{
+	font-size: 8pt;
+}
+.cretic-name{
+	font-style: italic;
+}
+.reviews-space{
+	margin-bottom: 20pt;
+}
+.desc dl dt{
+	font-weight: bold;
+}
+.desc dl dd{
+	margin-left: 20pt;
+	margin-bottom: 10pt;
+}
+.validator-section{
+	position: fixed;
+    bottom: 0;
+    right: 0;
+    opacity: 0.5;
 }
